--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "lodash": "^4.17.2",
     "redis-lock": "^0.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^3.11.1",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "jasmine": "^2.5.2",
+    "proxyquire": "^1.7.10"
+  },
+  "scripts": {
+    "test": "jasmine"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/iudelsmann/cronivo.git"
