--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Synced job scheduler using later and Redis",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine",
+    "coverage": "istanbul cover node_modules/jasmine/bin/jasmine.js"
   },
   "keywords": [
     "Redis",
@@ -24,9 +25,6 @@
     "eslint-plugin-import": "^2.2.0",
     "jasmine": "^2.5.2",
     "proxyquire": "^1.7.10"
-  },
-  "scripts": {
-    "test": "jasmine"
   },
   "repository": {
     "type": "git",
