--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - 6.7
+branches:
+  except:
+  - /^v[0-9]/
 before_install:
   - npm install -g jasmine
   - npm install -g eslint
